Paint tools Blur, Smear and Clone show a color swatch, even though it has no effect #60354

Closed
opened 2019-01-09 18:26:39 +01:00 by William Reynish · 5 comments

System Information
Operating system: MacOS 10.14
Graphics card: AMD Radeon R9 M395X 4096 MB

Blender Version
Broken: Blender 2.8, Jan 9th 2019

Short description of error
The Paint Mode tools Blur, Smear and Clone show a color swatch, even though it has no effect. The color swatch is only for Draw and Fill tools.

Exact steps for others to reproduce the error

  • Enable Texture Paint Mode
  • Switch to the Blue tool

The color swatch is still visible in the tool settings at the top, even though it is not applicable with this tool:

Screenshot 2019-01-09 at 18.22.03.png

**System Information** Operating system: MacOS 10.14 Graphics card: AMD Radeon R9 M395X 4096 MB **Blender Version** Broken: Blender 2.8, Jan 9th 2019 **Short description of error** The Paint Mode tools Blur, Smear and Clone show a color swatch, even though it has no effect. The color swatch is only for Draw and Fill tools. **Exact steps for others to reproduce the error** - Enable Texture Paint Mode - Switch to the Blue tool The color swatch is still visible in the tool settings at the top, even though it is not applicable with this tool: ![Screenshot 2019-01-09 at 18.22.03.png](https://archive.blender.org/developer/F6232046/Screenshot_2019-01-09_at_18.22.03.png)

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Campbell Barton was assigned by William Reynish 2019-01-09 18:28:14 +01:00

Hey, it seems like we still have some cases where we are showing the wrong tool settings for the chosen tool.

Here, Blur, Smear and Clone tools all wrongly display the color swatch.

Hey, it seems like we still have some cases where we are showing the wrong tool settings for the chosen tool. Here, Blur, Smear and Clone tools all wrongly display the color swatch.

This issue was referenced by 609d4f5c92

This issue was referenced by 609d4f5c92c76bd62fe77e880e38ae8528419b0a

Blend was also shown when it shouldn't have been. Fixed.

Blend was also shown when it shouldn't have been. Fixed.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60354
No description provided.