Fix T60354: Paint color shown when not used

Add 'has_color' check to avoid duplicated tool checks.

Also abbreviate text descriptions.